--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tremble-js</h1>
+        <h1>TrembleJS</h1>
         
         <p><a href=""><img src="https://raw.githubusercontent.com/tremble-js/tremble-js/master/logo.png" alt="Logo"></a></p> 
 
@@ -30,9 +30,9 @@
       <section>
 
 <h1>
-<a id="tremblejs" class="anchor" href="#tremblejs" aria-hidden="true"><span class="octicon octicon-link"></span></a>TrembleJS</h1>
+<a id="tremblejs" class="anchor" href="#tremblejs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tired of bugs creeping into your projects?</h1>
 
-<p>Automatically builds your website,  screenshots every page, and stores them in the cloud grouped by the commit. </p>
+<p>Automatically build your website, screenshot every page, and store them in the cloud grouped by the commit. </p>
 
 <p>When you find a bug and don't know what commit is responsible, check your screenshots and easily identify when it was introduced.</p>
 
