--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
         <p><a href=""><img src="https://raw.githubusercontent.com/tremble-js/tremble-js/master/logo.png" alt="Logo"></a></p> 
 
         <p>Stop trembling over layout bugs, let us find them for you.</p>
-
-        <ul>
-          <li><a href="https://github.com/tremble-js/tremble-js/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/tremble-js/tremble-js/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/tremble-js/tremble-js">View On <strong>GitHub</strong></a></li>
-        </ul>
+        
+        <p><a href="https://github.com/tremble-js/tremble-js">View On <strong>GitHub</strong></a></p>
+        <p><a href="https://github.com/obihann">View My GitHub Profile</a></p>
       </header>
       <section>
 
@@ -36,11 +33,11 @@
 
 <p>When you find a bug and don't know what commit is responsible, check your screenshots and easily identify when it was introduced.</p>
 
+<h2>license</h2>
 <p>This tool is protected by the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License v2</a>.</p>
 <p>Copyright <a href="http://jeffreyhann.ca/">Jeffrey Hann</a> 2015</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/obihann">obihann</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
