--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <p>Stop trembling over layout bugs, let us find them for you.</p>
         
-        <p><a href="https://github.com/tremble-js/tremble-js">View On <strong>GitHub</strong></a></p>
+        <p><a href="https://github.com/tremble-js/tremble-js">View the Project on GitHub</a></p>
         <p><a href="https://github.com/obihann">View My GitHub Profile</a></p>
       </header>
       <section>
