--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>When you find a bug and don't know what commit is responsible, check your screenshots and easily identify when it was introduced.</p>
 
-<h2>license</h2>
+<h2>License</h2>
 <p>This tool is protected by the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License v2</a>.</p>
 <p>Copyright <a href="http://jeffreyhann.ca/">Jeffrey Hann</a> 2015</p>
       </section>
