--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p><a href=""><img src="https://raw.githubusercontent.com/tremble-js/tremble-js/master/logo.png" alt="Logo"></a></p> 
 
         <p>Stop trembling over layout bugs, let us find them for you.</p>
-        
+        <h2>Links</h2>
         <p><a href="https://github.com/tremble-js/tremble-js">View the Project on GitHub</a></p>
         <p><a href="https://github.com/obihann">View My GitHub Profile</a></p>
       </header>
